--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -2,7 +2,8 @@
 ja:
   name: "蜷川　達郎　"
   title: "英国ロンドンのヘアスタイリスト"
-  intro: "英国ロンドンのShunjiのプロのヘアスタイリスト。 「サスーンカット」スタイリングテクニックでアジアと白人の髪を専門としています。"
+  intro: "イギリスロンドンの<a href="https://www.shunji.london" target="_blank">Shunji</a>で働くプロフェッショナルヘアスタイリスト。東京で学んだ技術をロンドンでも提供します。"
+    # https://www.shunji.london
 
   label_follow: "フォローする"
   label_email: "Eメールする"
@@ -11,7 +12,7 @@ ja:
 
   bio_title: "伝記"
   bio_body_1: "18歳で美容師を始め東京有名サロンMINXで経験を積んだのち、ロンドンへ。現在はロンドン一等地、コヴェントガーデンのShunjiでサロンワークを行う。"
-  bio_body_2: "日本人のお客様には日本で身につけたカット技術を、ヨーロピアンのお客様にはロンドンで得たサスーンカットのスキルを生かし、様々な国の髪質や似合うスタイルを加味しながら提案しているカラーリングではパーソナルカラーの知識をいかし、お客様1人1人にあったカラーリングを提供。"
+  bio_body_2: "日本人のお客様には日本で身につけたカット技術を、ヨーロピアンのお客様にはロンドンで得たサスーンカットのスキルを生かし、様々な国の髪質や似合うスタイルを加味しながら提案している。カラーリングではパーソナルカラーの知識をいかし、お客様1人1人にあったカラーリングを提供。"
   bio_body_3: "「似合う」 ナチュラルカラーやハイライトなどを得意とする。"
 
   label_location: "場所："
@@ -22,34 +23,34 @@ ja:
   info_location: "ロンドン、英国"
 
   price_list_title: "価格表"
-  price_list_1: "カット＆ブロードライ"
-  price_list_1a: "レディース"
-  price_list_1b: "男性用"
-  price_list_2: "ウォッシュ＆ブロードライ"
-  price_list_2a: "ブロードライ"
-  price_list_2b: "速乾性"
-  price_list_3: "パーマネントカラー"
-  price_list_3a: "再成長"
-  price_list_3b: "フルヘッド（ショート）"
-  price_list_3c: "フルヘッド（ミディアム）"
-  price_list_3d: "フルヘッド（ロング）"
-  price_list_4: "漂白"
-  price_list_4a: "再成長"
-  price_list_4b: "フルヘッド（ショート）"
-  price_list_4c: "フルヘッド（ミディアム）"
-  price_list_4d: "フルヘッド（ロング）"
-  price_list_4e: "2番目のアプリケーション"
-  price_list_5: "Balayage"
-  price_list_5a: "単色"
-  price_list_5b: "ブリーチ付き"
-  price_list_6: "ハイライト"
-  price_list_6a: "Tセクション"
-  price_list_6b: "ハーフヘッド"
-  price_list_6c: "フルヘッド"
-  price_list_7: "エクストラ"
-  price_list_7a: "Olaplex、Fiberplex"
-  price_list_7b: "眉毛の色合い"
-  price_list_7c: "日本のヘアトリートメント"
-  price_list_7d: "日本の縮毛矯正"
+  # price_list_1: "カット＆ブロードライ"
+  # price_list_1a: "レディース"
+  # price_list_1b: "男性用"
+  # price_list_2: "ウォッシュ＆ブロードライ"
+  # price_list_2a: "ブロードライ"
+  # price_list_2b: "速乾性"
+  # price_list_3: "パーマネントカラー"
+  # price_list_3a: "再成長"
+  # price_list_3b: "フルヘッド（ショート）"
+  # price_list_3c: "フルヘッド（ミディアム）"
+  # price_list_3d: "フルヘッド（ロング）"
+  # price_list_4: "漂白"
+  # price_list_4a: "再成長"
+  # price_list_4b: "フルヘッド（ショート）"
+  # price_list_4c: "フルヘッド（ミディアム）"
+  # price_list_4d: "フルヘッド（ロング）"
+  # price_list_4e: "2番目のアプリケーション"
+  # price_list_5: "Balayage"
+  # price_list_5a: "単色"
+  # price_list_5b: "ブリーチ付き"
+  # price_list_6: "ハイライト"
+  # price_list_6a: "Tセクション"
+  # price_list_6b: "ハーフヘッド"
+  # price_list_6c: "フルヘッド"
+  # price_list_7: "エクストラ"
+  # price_list_7a: "Olaplex、Fiberplex"
+  # price_list_7b: "眉毛の色合い"
+  # price_list_7c: "日本のヘアトリートメント"
+  # price_list_7d: "日本の縮毛矯正"
 
   credit: "ウェブサイト、ビデオ、写真"
