Add book now button

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -7,6 +7,7 @@ en:
 
   label_follow: 'Follow'
   label_email: 'Email'
+  label_book: 'Book Now'
   label_close: 'Close'
   label_show_bio: 'Bio & Price List'
 
