Remove Link Hair design

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -2,7 +2,7 @@
 en:
   name: 'Tatsuro Ninagawa'
   title: 'Hair stylist in Berlin, Germany'
-  intro: 'Professional hairstylist at <a href="https://www.linkhair.de/" target="_blank">Link Hair Design</a> in Berlin, Germany. Specialized in Asian and European hair with the “Sassoon Cut” technique.'
+  intro: 'Professional hairstylist in Berlin, Germany. Specialized in Asian and European hair with the “Sassoon Cut” technique.'
   # https://www.linkhair.de/
 
   label_follow: 'Follow'
