--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -2,7 +2,7 @@
 ja:
   name: '蜷川　達郎'
   title: 'ベルリンドイツのヘアスタイリスト'
-  intro: 'ドイツ、ベルリンの<a href="https://www.linkhair.de/" target="_blank">Link Hair Design</a>で働くプロフェッショナルヘアスタイリスト。東京、ロンドンで学んだ技術をベルリンでも提供します。'
+  intro: 'ドイツ、ベルリン働くプロフェッショナルヘアスタイリスト。東京、ロンドンで学んだ技術をベルリンでも提供します。'
   # https://www.linkhair.de/
 
   label_follow: 'フォローする'
