Remove reference of Link

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -12,7 +12,7 @@ en:
   label_show_bio: 'Bio & Price List'
 
   bio_title: 'Bio'
-  bio_body_1: 'Tatsuro Ninagawa started his career at MINX which is one of the most famous beauty salons in Japan. After that he goes to London, the holy land of hairdressers. In 2021, He moved to Berlin to work at Link Hair Design in Prenzlauer Berg. He has ten years of experience.'
+  bio_body_1: 'Tatsuro Ninagawa started his career at MINX which is one of the most famous beauty salons in Japan. After that he goes to London, the holy land of hairdressers. In 2021, with ten years of experience, he has relocated to Berlin.'
   bio_body_2: 'Since he has experience in three big global cities, his technique has been specialized to make you look more attractive by utilizing different techniques depending on your hair textures. “Sassoon Cut” is one of his cutting techniques for people who have very soft hair mainly in Europe. He knows how to make Asian hair look more beautiful as well. Taking your advantage is what he does. Your features, face frame, and your hair type.'
   bio_body_3: 'In order to commit to fit your hairstyle with yourself perfectly, a personal color diagnosis method is used when he finds your best color. He is dedicated to creating gorgeous highlights and “harmonized” natural colors for you.'
 
