--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -12,7 +12,7 @@ ja:
   # label_show_bio: '伝記と価格表'
 
   # bio_title: '伝記'
-  bio_body_1: '18歳で美容師を始め東京有名サロンMINXで経験を積んだのち、ロンドンへ。その後活動拠点をベルリンに移し現在はベルリンの一等地プレンツラウアーベルグのLink Hair Designでサロンワークを行う。'
+  bio_body_1: '18歳で美容師を始め東京有名サロンMINXで経験を積んだのち、ロンドンへ。2021年に、彼は活動拠点をベルリンに移しました。'
   bio_body_2: '日本人のお客様には日本で身につけたカット技術を、ヨーロピアンのお客様にはロンドンで得たサスーンカットのスキルを生かし、様々な国の髪質や似合うスタイルを加味しながら提案している。カラーリングではパーソナルカラーの知識をいかし、お客様1人1人にあったカラーリングを提供。'
   bio_body_3: '「似合う」ナチュラルカラーやハイライトなどを得意とする。'
 
